--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    steps:
       - name: Restart services
         uses: appleboy/ssh-action@v0.1.8
         with:
